Co-authored-by: Matt Matti <realmattimatt@users.noreply.github.com> Co-authored-by: Tiffany <TiffanyClark@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -10,9 +10,29 @@
   <body>
     <h1 id="demo2">Welcome to Our JavaScript Class!</h1>
 
-    <p id="demo">This is a paragraph.</p>
+    <img
+      src="/Screenshot 2024-03-06 at 17-25-58 Facebook - log in or sign up.png"
+      alt=""
+    />
 
-    <button onclick="changeText()">Click Me Please!</button>
+    <p id="demo">Connect with friends and the world around you on Facebook.</p>
+
+    <p id="dom1">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua.
+    </p>
+    <p id="dom2">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua.
+    </p>
+    <p id="dom3">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua.
+    </p>
+
+    <button onclick="changeText()">Click Me</button>
+
+    <button onclick="redText()">Red Text</button>
 
     <script src="script.js"></script>
   </body>
